# qp_testing

./: CMakeLists.txt  README.md
include/: gsl_cqp.h  optimizer_all.h  solver_CGAL.h  solver_GSL.h  solver_qpOASES.h
src/: main.cpp
